# smart-device-client

./: README.md  pyproject.toml
smart_device_client/: __init__.py  smart_device_client.py
